cdbs (0.4.62) UNRELEASED; urgency=low

  * Fix detect exit code in for loops in python-distutils.mk. Closes:
    bug#546589.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 14 Sep 2009 14:25:26 +0200

cdbs (0.4.61+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * python-distutils.mk changes for Python >= 2.6 (closes: #537373):
    - hardcode "site-packages" using --install-lib (Python >=2.6 is using
      "dist-packages" by default)
    - add --prefix=/usr (Python >= 2.6 is using /usr/local by default)

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 18 Sep 2009 22:54:47 +0200

cdbs (0.4.61) unstable; urgency=low

  * Brown paperbag release: Fix excess closing paranthesis in
    autotools-files.mk. Closes: bug#543916, thanks to Zak B. Elep.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 27 Aug 2009 21:10:32 +0200

cdbs (0.4.60) unstable; urgency=low

  * Relax perlmodule.mk build-dependency on perl (drop versioning
    unneeded since Debian Policy 3.8.3).
  * Rewrite autotools cross-compiling comment to clarify that cross-
    compiling requires autotools 2.52 or newer (not that we conflict
    with autotools2.13, which apparently changed in 0.4.22-1.1).
  * Fix include DEB_MAKEMAKER_USER_FLAGS in DEB_MAKEMAKER_INVOKE (not
    separately when invoked) to handle options that must be declared
    before arguments. Closes: bug#481893, thanks to Dmitry E. Oboukhov.
  * Support parallel builds in makefile, automake, perlmodule, qmake and
    cmake classes when DEB_BUILD_PARALLEL is non-empty. Closes:
    bug#505328, thanks to Steve M. Robbins and Felipe Sateler.
  * Simplify autotools-files.mk and make m4 dir configurable through
    new variable DEB_ACLOCAL_ARGS. Fix copyright of that file. Closes:
    bug#537497, thanks to Robert Millan.

 -- Jonas Smedegaard <dr@jones.dk>  Sun, 02 Aug 2009 13:51:56 +0200

cdbs (0.4.59) unstable; urgency=low

  * Defer setting DEB_BUILD_DEPENDENCIES in buildcore.mk (use ?= not =),